# my_pytest_project

./: main.py  pyproject.toml
tests/: test_arrs.py
