[tool.poetry]
name = "pytest-project"
version = "0.1.0"
description = "Test PyTest"
authors = ["Aleksey Bondarenko <bondaralexcy.gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
